[project]
name = "spectral-util"
dynamic = ["version"]
authors = [
    {name = "Philip G. Brodrick", email = "philip.g.brodrick@jpl.nasa.gov"},
]
description = "Imaging Spectrometer Utilities"
readme = "README.md"
license = {text = "BSD 3-Clause License"}
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click",
    "netCDF4<1.7.1",
    "numpy>=1.20,<2.0.0",
    "gdal>=3.0.0",
    "spectral>=0.19",
    "scipy>1.0",
]

[project.urls]
Homepage = "http://github.com/emit-sds/SpectralUtil"

[project.optional-dependencies]
test = ["pytest>=3.5.1"]

[project.scripts]
spectral_util = "spectral_util.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "spectral_util/__init__.py"
